# postgres-mcp

./: .env.example  main.py  pyproject.toml  requirements.txt
